2nd try to fix spacing footer socials tablet.
removed flex box gap property and changed it with margin right for each idividual element

--- a/CSS/headernfooter.scss
+++ b/CSS/headernfooter.scss
@@ -20,6 +20,7 @@ body{
     max-width: 100vw;
     margin: 0;
     font-family: 'PT Sans', sans-serif;
+    background-color: $main-background;
 }
 
 #header{
@@ -170,7 +171,6 @@ body{
         flex-direction: row; /*makes ul horizontal list*/
         align-items: center;
         justify-content: flex-end; /*ul always @ right side*/
-        gap: 2rem;
     }
 
     #nav-laptop > ul > li{
@@ -183,6 +183,7 @@ body{
         color: $background-text;
         font-size: 1.2rem;
         font-weight: 500;
+        margin-right: 1rem;
     }
 
     .nav-link:link, .nav-link:hover, .nav-link:active{
@@ -317,12 +318,13 @@ footer, i-container{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    gap: 2rem;
+    border: solid salmon;
 }
 
 .i-container > a > i{
     font-size: 2.5rem;
-    color: $background-text
+    color: $background-text;
+    margin-right: 2rem;
 }
 
 .i-container > a > i:active, .i-container > a > i:hover{
